# reviewturtl

./: .env.sample  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  crap.js  docker-compose.yml  docker.env  index.js  package-lock.json  package.json  payload.js  pyproject.toml  reviewturtl.postman_collection.json  reviewturtl_summary.py
.github/workflows/: pr_summarizer.yml  reviewturtl.yml
cookbooks/: a.json  advanced_rag.ipynb  agentic_framework.ipynb  code_search.ipynb  evaluators.ipynb  example.py  optimizers.ipynb  parser.ipynb  parser_2.ipynb  react_agent.ipynb  sample_reviewer.ipynb  sample_summarizer.ipynb  summarizer.ipynb  summarizer_signature_examples.csv  trainset.csv  using_signatures.ipynb
infra/: ai.Dockerfile
reviewturtl/: logger.py  settings.py
reviewturtl/api/: api.py  cache_tools.py  middlewares.py  route_types.py
reviewturtl/api/routers/: code_search.py  (+4 more)
reviewturtl/clients/: ai_client.py  db_client.py  github_client.py  qdrant_client.py
reviewturtl/src/: data_models.py
scripts/: Readme.md  ast_extraction_script.py  comment_on_pr.py  scrapper.sh
scripts/methods/: methods.json
src/: index.js
src/constants/: config.js  github.js
src/controllers/: webhook.controller.js
src/helpers/: commands.js  pullRequests.js
src/middlewares/: errorHandler.middleware.js  octokit.middleware.js  webhook.middleware.js
src/routes/: action.route.js  webhook.route.js
src/services/: octokit.service.js  turtle.service.js
src/utils/: responseHandler.js
test/fixtures/: issues.opened-1.json
website/src/: index.html
(+28 files in other folders)
