[tool.poetry]
name = "reviewturtl"
version = "0.1.0"
description = "A GitHub Actions workflow for summarizing pull requests using OpenAI's GPT model."
authors = ["Aarish <aarish@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
