[tool.poetry]
name = "reviewturtl"
version = "0.1.0"
description = "Your Open Source Review tool!"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
fastapi = "^0.111.0"
dspy-ai = "^2.4.12"


[tool.poetry.group.dev.dependencies]
dspy-ai = "^2.4.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
